Change: Change initialization scheme